# rs-credentials-manager

./: .gitignore  Cargo.toml  LICENSE  README.rst  cred-man-gtk.desktop  justfile
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: cred_man_gtk.ui  main.rs
src/: encrypted_file.rs  lib.rs  main.rs
tui/: Cargo.toml
tui/src/: app_state.rs  main.rs  ui.rs
tui/src/ui/: key_name_edit_view.rs  login_view.rs  main_view.rs  subkey_edit_view.rs
