[package]
name = "cred-man"
version = "1.3.0"
authors = ["Dmitry Kalyanov <Kalyanov.Dmitry@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[lib]
name = "cred_man_lib"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.31"
dirs = "5.0.1"
getrandom = "0.2.11"
glib = "0.18.3"
gtk = { version = "0.18.1", features = ["v3_24"] }
linenoise-rust = "0.2.1"
scrypt = "0.11.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
