[workspace]
members = [
    ".",
    "cli",
    "gui",
]

[package]
name = "cred-man"
version = "1.3.0"
authors = ["Dmitry Kalyanov <Kalyanov.Dmitry@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[lib]
name = "cred_man_lib"

[dependencies]
aes-gcm = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
getrandom = { workspace = true }
scrypt = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }

[workspace.dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.31"
cred-man = { path = "." }
dirs = "5.0.1"
getrandom = "0.2.11"
scrypt = "0.11.0"
serde = { version = "1.0.192" }
serde_json = "1.0.108"
