[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
cred-man = { workspace = true }
linenoise-rust = "0.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
