[package]
name = "cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "cred_man"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
cred-man = { workspace = true }
linenoise-rust = "0.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
