[package]
name = "cred-man-tui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "cred-man-tui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
cli-clipboard = "0.4.0"
cred-man = { workspace = true }
ratatui = "0.29.0"
